# binutils-shared

./: pyproject.toml
monistode_binutils_shared/: __init__.py  bytearray.py  executable.py  location.py  object_manager.py  relocation.py  symbol.py
monistode_binutils_shared/section/: __init__.py  common.py  data.py  relocation_table.py  section_type.py  symbol_table.py  text.py
monistode_binutils_shared/segment/: __init__.py  common.py  data.py  text.py
