[tool.poetry]
name = "monistode-binutils-shared"
version = "0.1.12"
description = "A collection of tools shared among the monistode binutils."
authors = ["rizerphe <44440399+rizerphe@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "monistode_binutils_shared"}]

[tool.poetry.dependencies]
python = "^3.11"
bitstruct = "^8.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
